--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,13 @@ a {
 a:hover {
   color: #535bf2;
 }
-
-body {
+body,
+html {
+  margin: 0; /* Remove default margin */
+  padding: 0; /* Remove default padding */
+  width: 100%; /* Make it span the full width of the screen */
+  height: 100%; /* Make it span the full height of the screen */
+  box-sizing: border-box; /* Include padding and border in width/height */
 }
 
 h1 {
